Fix menu spacing with gap property

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,12 +52,12 @@ nav #logo {
 
 nav #menu {
     display: flex;
+    gap: 1.5rem;
 }
 
 nav #menu .menu-items {
     cursor: pointer;
     height: 100%;
-    padding: 0 20px;
     transition: .4s;
 }
 
